# learning

agno-agent/: .gitignore  DOCKER_SETUP.md  FEATURES.md  README.md  SETUP.md  SETUP_GUIDE.md  docker-compose.yml  setup-check.sh  test-api.sh
agno-agent/.cursor/plans/: implementation-plan-electrodry-ai-helpdesk-supabase-edition-a75fc2b8.plan.md
agno-agent/backend/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml
agno-agent/backend/app/: __init__.py  agent_os.py  main.py
agno-agent/backend/app/agents/: __init__.py  assistant.py  helpdesk.py  tools.py
agno-agent/backend/app/core/: __init__.py  auth.py  config.py  database.py  knowledge_base.py
agno-agent/backend/app/models/: __init__.py  database.py  schemas.py
agno-agent/backend/database/migrations/: 0001_initial_schema.sql
agno-agent/backend/tests/: conftest.py  test_api.py
agno-agent/docs/: API_MIGRATION_GUIDE.md  Electrodry_AI_Helpdesk_Requirements.md  FRONTEND_UPDATES.md  KNOWLEDGE_API_FIX.md  README.md  SIGNUP_FEATURE.md  agno_quick_reference.md  scope_of_work_phase_1  technical_stack.md
agno-agent/frontend/: Dockerfile  README.md  package-lock.json  package.json
agno-agent/frontend/app/: layout.tsx  page.tsx
agno-agent/frontend/lib/: api.ts  auth-context.tsx  providers.tsx  supabase-server.ts  supabase.ts  utils.ts
memories-app/: .env  .env.example  DATABASE_SETUP.md  README.md  SUPABASE_BEST_PRACTICES.md  SUPABASE_CLI_WORKFLOW.md  package.json  pnpm-lock.yaml
memories-app/src/: App.tsx
memories-app/src/pages/: AuthPage.tsx  MemoriesPage.tsx
(+10 files in other folders)
